@@ -1082,8 +1082,8 @@ The options allowed are :
 		<term><option>--objdump-params</option></term>
 		<term><option>-o</option></term>
 		<listitem><para>
-		pass the params strings directly to objdump allowing to pass additional parameters to objdump.
-		Check the objdump man page to see what options objdump accept e.g. <option>-o '--disassembler-options=intel'</option>
+		Pass the comma separated additional parameters to objdump. Check the objdump man page
+		to see what options objdump accept e.g. <option>-o '--disassembler-options=intel'</option>
 		to get Intel assembly syntax instead of att syntax. This option can be used only with
 		<option>--assembly</option> or <option>--source-with-assembly</option>
 		</para></listitem>
